--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_KEY_OPENAI=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
+API_KEY_OPENAI="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"
