--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nextjs-python-compiler",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false,
+    "child_process": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +14,7 @@
   },
   "dependencies": {
     "ace-builds": "^1.9.6",
+    "mongoose": "^6.6.0",
     "next": "12.2.5",
     "openai": "^3.0.0",
     "python-shell": "^3.0.1",
