--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ace-builds": "^1.9.6",
+    "child_process": "^1.0.2",
     "mongoose": "^6.6.0",
     "next": "12.2.5",
     "openai": "^3.0.0",
