--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "browser": {
-    "fs": false,
-    "child_process": false
+    "fs": true,
+    "child_process": true
   },
   "scripts": {
     "dev": "next dev",
